--- a/charts/service-tracker-ui/values.yaml
+++ b/charts/service-tracker-ui/values.yaml
@@ -6,6 +6,6 @@ service:
 
 deploy:
   name: service-tracker-ui
-  acrServer: "acrhackfestsangwon25398.io"
+  acrServer: "acrhackfestsangwon25398.azurecr.io"
   imageTag: "1.0"
   containerPort: 8080
